[package]
name = "ebpf-testing"
version = "0.1.0"
authors = ["0xMimir <mimirz@proton.me>"]
edition = "2021"

[[bin]]
name = "kern-code"
path = "src/main.rs"
required-features = ["kern"]

[[bin]]
name = "ebpf-recoder"
path = "src/main.rs"
required-features = ["user"]

[dependencies]
ebpf-kern = { git = "https://github.com/vlad9486/ebpf-tools", optional = true }
ebpf-user = { git = "https://github.com/vlad9486/ebpf-tools", optional = true }

[features]
default = ["user"]
kern = ["ebpf-kern/macros"]
user = ["ebpf-user/macros"]
